k8s/app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jp-app
  template:
    metadata:
      labels:
        app: jp-app
    spec:
      containers:
        - name: caddy
          image: caddy:2
          ports:
            - containerPort: 8080
          args: ["caddy", "run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
          volumeMounts:
            - name: caddyfile
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
              readOnly: true
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
        - name: app
          image: localhost:5000/journaling.place
          command: ["npm", "run", "start"]
          ports:
            - containerPort: 3000
            - containerPort: 3333
          resources:
            limits:
              memory: "1024Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      volumes:
        - name: caddyfile
          configMap:
            name: jp-caddy-config
---
kind: Service
apiVersion: v1
metadata:
  name: jp-app
spec:
  selector:
    app: jp-app
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jp-app-ingress
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: staging.journaling.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jp-app
                port:
                  number: 8080
